--- a/users-dev.yml
+++ b/users-dev.yml
@@ -39,7 +39,7 @@ spring:
         url: jdbc:mysql://localhost:3306/users?useUnicode=true&characterEncoding=utf8&useSSL=false
         name:
         username: root
-        password: root
+        password: rootroot
         hikari:
             data-source-properties:
                 cachePrepStmts: true
